Revision history for Task-Template-Benchmark

1.00_03 Version released at .  *** Development version. ***
        Version started at  2010-09-15-12:53.
        Added HTML::Mason requirement.
        Added Solution requirement.
        Added HTML::Macro requirement.

1.00_02 Version released at 2010-08-15-22:30.  *** Development version. ***
        Version started at  2010-08-15-22:30.
        Added Parse::Template requirement.

1.00_01 Version released at 2010-08-12-11:37.  *** Development version. ***
        Version started at  2010-08-12-10:59.
        Updated version requirements for TextXslateTT plugin.
        Required version 0.36 of Module::Build for "installdeps".

1.00    Version released at 2010-08-02-06:58.
        Version started at  2010-07-27-18:07.
        Added "see also" to POD.
        Stripped POD from README intro.
        Typo fixes in documentation.

0.99_01 Version released at 2010-07-27-16:48.  *** Development version. ***
        Version started at  2010-07-26-10:45.
        Initial release.